# yaar

./: .gitignore  README.md  pyproject.toml
yaar/: __init__.py  agent.py  logging.py  models.py  runner.py  session.py
yaar/acceptancetests/: run_agent_test.py
yaar/cli/: ai.py  research.py  session.py  subagents.py
yaar/prompts/: __init__.py  feature-request-check.md
yaar/prompts/commands/: research_codebase.md
yaar/tools/: __init__.py  tools.py
yaar/tools/tests/: insert_to_file_test.py  write_read_file_test.py
